<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompanyDetails.CompanyDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_company_details"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_company_details"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="left"
            android:layout_margin="12dp"
            android:src="@drawable/image_sham_left" />

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="215dp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:background="@drawable/rectrage_image_company_details"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_companyDetails_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:textColor="#ff212121"
                    android:textSize="20dp" />

                <RatingBar
                    android:id="@+id/ratingBar_companyDetails"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:numStars="5"
                    android:rating="4.5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_item_reviews_companyDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviews"
                            android:textColor="#ff006afd"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_item_reviews_number_companyDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_reviews"
                            android:textColor="#ff006afd"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_item_comments_companyDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/commnets"
                            android:textColor="#ff006afd"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_item_comments_number_companyDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_comments"
                            android:textColor="#ff006afd"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_item_minimum_order_comapnyDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minimum_order"
                        android:textColor="#ff212121"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_minimum_order_number_comapnyDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_minimum_order"
                        android:textColor="#ff212121"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="15dp"
                        android:src="@drawable/car_image_company_details" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/car_companies"
                        android:textColor="#ff757575"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="15dp"
                        android:src="@drawable/route_iamge_company_details" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/gps_delevary"
                        android:textColor="#ff757575"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_item_packages"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_design"
                    android:text="@string/others"
                    android:textColor="#13CEE6"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_item_services"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_design"
                    android:text="@string/packages"
                    android:textColor="#13CEE6"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_item_offers"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_design"
                    android:text="@string/services"
                    android:textColor="#13CEE6"
                    android:textSize="15sp" />

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_item_order_companyDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/m_progress_companyDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_item_companyDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <GridView
                android:id="@+id/gridview__item_companyDetails"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:numColumns="2"
                android:verticalSpacing="25dp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/tab_bar_profile"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearlayout_home_companyDetais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/image_layout_home_company_details"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="50dp"
                        android:text="@string/home_side_menu"
                        android:textColor="#ff0075f8"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageview_home_companyDetais"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/iamge_home_profile" />

                    <ImageView
                        android:id="@+id/imageview_sort_companyDetais"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="35dp"
                        android:src="@drawable/image_sort_prfile" />

                    <ImageView
                        android:id="@+id/imageview_profile_companyDetais"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="35dp"
                        android:src="@drawable/image_profile_companies" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>